qt/webkit/gen_qgraphicswebview.h

typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QGraphicsSceneContextMenuEvent QGraphicsSceneContextMenuEvent;
typedef struct QGraphicsSceneDragDropEvent QGraphicsSceneDragDropEvent;
typedef struct QGraphicsSceneHoverEvent QGraphicsSceneHoverEvent;
typedef struct QGraphicsSceneMouseEvent QGraphicsSceneMouseEvent;
typedef struct QGraphicsSceneMoveEvent QGraphicsSceneMoveEvent;
typedef struct QGraphicsSceneResizeEvent QGraphicsSceneResizeEvent;
typedef struct QGraphicsSceneWheelEvent QGraphicsSceneWheelEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QObject QObject;
typedef struct QPainter QPainter;
typedef struct QPainterPath QPainterPath;
typedef struct QPointF QPointF;
typedef struct QRectF QRectF;
typedef struct QShowEvent QShowEvent;
typedef struct QStyleOption QStyleOption;
typedef struct QStyleOptionGraphicsItem QStyleOptionGraphicsItem;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
bool QGraphicsWebView_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
bool QGraphicsWebView_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_mouseMoveEvent(void* self, QGraphicsSceneMouseEvent* param1);
bool QGraphicsWebView_override_virtual_hoverMoveEvent(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_hoverMoveEvent(void* self, QGraphicsSceneHoverEvent* param1);
bool QGraphicsWebView_override_virtual_hoverLeaveEvent(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_hoverLeaveEvent(void* self, QGraphicsSceneHoverEvent* param1);
bool QGraphicsWebView_override_virtual_wheelEvent(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_wheelEvent(void* self, QGraphicsSceneWheelEvent* param1);
bool QGraphicsWebView_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_keyPressEvent(void* self, QKeyEvent* param1);
bool QGraphicsWebView_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_keyReleaseEvent(void* self, QKeyEvent* param1);
bool QGraphicsWebView_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_contextMenuEvent(void* self, QGraphicsSceneContextMenuEvent* param1);
bool QGraphicsWebView_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_dragEnterEvent(void* self, QGraphicsSceneDragDropEvent* param1);
bool QGraphicsWebView_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_dragLeaveEvent(void* self, QGraphicsSceneDragDropEvent* param1);
bool QGraphicsWebView_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_dragMoveEvent(void* self, QGraphicsSceneDragDropEvent* param1);
bool QGraphicsWebView_override_virtual_dropEvent(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_dropEvent(void* self, QGraphicsSceneDragDropEvent* param1);
bool QGraphicsWebView_override_virtual_focusInEvent(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_focusInEvent(void* self, QFocusEvent* param1);
bool QGraphicsWebView_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_focusOutEvent(void* self, QFocusEvent* param1);
bool QGraphicsWebView_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* param1);
bool QGraphicsWebView_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QGraphicsWebView_virtualbase_focusNextPrevChild(void* self, bool next);
bool QGraphicsWebView_override_virtual_sceneEvent(void* self, intptr_t slot);
bool QGraphicsWebView_virtualbase_sceneEvent(void* self, QEvent* param1);
bool QGraphicsWebView_override_virtual_getContentsMargins(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_getContentsMargins(const void* self, double* left, double* top, double* right, double* bottom);
bool QGraphicsWebView_override_virtual_type(void* self, intptr_t slot);
int QGraphicsWebView_virtualbase_type(const void* self);
bool QGraphicsWebView_override_virtual_paintWindowFrame(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_paintWindowFrame(void* self, QPainter* painter, QStyleOptionGraphicsItem* option, QWidget* widget);
bool QGraphicsWebView_override_virtual_boundingRect(void* self, intptr_t slot);
QRectF* QGraphicsWebView_virtualbase_boundingRect(const void* self);
bool QGraphicsWebView_override_virtual_shape(void* self, intptr_t slot);
QPainterPath* QGraphicsWebView_virtualbase_shape(const void* self);
bool QGraphicsWebView_override_virtual_initStyleOption(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_initStyleOption(const void* self, QStyleOption* option);
bool QGraphicsWebView_override_virtual_propertyChange(void* self, intptr_t slot);
QVariant* QGraphicsWebView_virtualbase_propertyChange(void* self, struct miqt_string propertyName, QVariant* value);
bool QGraphicsWebView_override_virtual_windowFrameEvent(void* self, intptr_t slot);
bool QGraphicsWebView_virtualbase_windowFrameEvent(void* self, QEvent* e);
bool QGraphicsWebView_override_virtual_windowFrameSectionAt(void* self, intptr_t slot);
int QGraphicsWebView_virtualbase_windowFrameSectionAt(const void* self, QPointF* pos);
bool QGraphicsWebView_override_virtual_changeEvent(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_changeEvent(void* self, QEvent* event);
bool QGraphicsWebView_override_virtual_closeEvent(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_closeEvent(void* self, QCloseEvent* event);
bool QGraphicsWebView_override_virtual_hideEvent(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_hideEvent(void* self, QHideEvent* event);
bool QGraphicsWebView_override_virtual_moveEvent(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_moveEvent(void* self, QGraphicsSceneMoveEvent* event);
bool QGraphicsWebView_override_virtual_polishEvent(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_polishEvent(void* self);
bool QGraphicsWebView_override_virtual_resizeEvent(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_resizeEvent(void* self, QGraphicsSceneResizeEvent* event);
bool QGraphicsWebView_override_virtual_showEvent(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_showEvent(void* self, QShowEvent* event);
bool QGraphicsWebView_override_virtual_grabMouseEvent(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_grabMouseEvent(void* self, QEvent* event);
bool QGraphicsWebView_override_virtual_ungrabMouseEvent(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_ungrabMouseEvent(void* self, QEvent* event);
bool QGraphicsWebView_override_virtual_grabKeyboardEvent(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_grabKeyboardEvent(void* self, QEvent* event);
bool QGraphicsWebView_override_virtual_ungrabKeyboardEvent(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_ungrabKeyboardEvent(void* self, QEvent* event);
bool QGraphicsWebView_override_virtual_eventFilter(void* self, intptr_t slot);
bool QGraphicsWebView_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QGraphicsWebView_override_virtual_timerEvent(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QGraphicsWebView_override_virtual_childEvent(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_childEvent(void* self, QChildEvent* event);
bool QGraphicsWebView_override_virtual_customEvent(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_customEvent(void* self, QEvent* event);
void QGraphicsWebView_virtualbase_connectNotify(void* self, QMetaMethod* signal);