qt/webkit/gen_qgraphicswebview.nim

proc fcQGraphicsWebView_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_mouseReleaseEvent".}
proc fQGraphicsWebView_virtualbase_mouseMoveEvent(self: pointer, param1: pointer): void{.importc: "QGraphicsWebView_virtualbase_mouseMoveEvent".}
proc fcQGraphicsWebView_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_mouseMoveEvent".}
proc fQGraphicsWebView_virtualbase_hoverMoveEvent(self: pointer, param1: pointer): void{.importc: "QGraphicsWebView_virtualbase_hoverMoveEvent".}
proc fcQGraphicsWebView_override_virtual_hoverMoveEvent(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_hoverMoveEvent".}
proc fQGraphicsWebView_virtualbase_hoverLeaveEvent(self: pointer, param1: pointer): void{.importc: "QGraphicsWebView_virtualbase_hoverLeaveEvent".}
proc fcQGraphicsWebView_override_virtual_hoverLeaveEvent(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_hoverLeaveEvent".}
proc fQGraphicsWebView_virtualbase_wheelEvent(self: pointer, param1: pointer): void{.importc: "QGraphicsWebView_virtualbase_wheelEvent".}
proc fcQGraphicsWebView_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_wheelEvent".}
proc fQGraphicsWebView_virtualbase_keyPressEvent(self: pointer, param1: pointer): void{.importc: "QGraphicsWebView_virtualbase_keyPressEvent".}
proc fcQGraphicsWebView_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_keyPressEvent".}
proc fQGraphicsWebView_virtualbase_keyReleaseEvent(self: pointer, param1: pointer): void{.importc: "QGraphicsWebView_virtualbase_keyReleaseEvent".}
proc fcQGraphicsWebView_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_keyReleaseEvent".}
proc fQGraphicsWebView_virtualbase_contextMenuEvent(self: pointer, param1: pointer): void{.importc: "QGraphicsWebView_virtualbase_contextMenuEvent".}
proc fcQGraphicsWebView_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_contextMenuEvent".}
proc fQGraphicsWebView_virtualbase_dragEnterEvent(self: pointer, param1: pointer): void{.importc: "QGraphicsWebView_virtualbase_dragEnterEvent".}
proc fcQGraphicsWebView_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_dragEnterEvent".}
proc fQGraphicsWebView_virtualbase_dragLeaveEvent(self: pointer, param1: pointer): void{.importc: "QGraphicsWebView_virtualbase_dragLeaveEvent".}
proc fcQGraphicsWebView_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_dragLeaveEvent".}
proc fQGraphicsWebView_virtualbase_dragMoveEvent(self: pointer, param1: pointer): void{.importc: "QGraphicsWebView_virtualbase_dragMoveEvent".}
proc fcQGraphicsWebView_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_dragMoveEvent".}
proc fQGraphicsWebView_virtualbase_dropEvent(self: pointer, param1: pointer): void{.importc: "QGraphicsWebView_virtualbase_dropEvent".}
proc fcQGraphicsWebView_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_dropEvent".}
proc fQGraphicsWebView_virtualbase_focusInEvent(self: pointer, param1: pointer): void{.importc: "QGraphicsWebView_virtualbase_focusInEvent".}
proc fcQGraphicsWebView_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_focusInEvent".}
proc fQGraphicsWebView_virtualbase_focusOutEvent(self: pointer, param1: pointer): void{.importc: "QGraphicsWebView_virtualbase_focusOutEvent".}
proc fcQGraphicsWebView_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_focusOutEvent".}
proc fQGraphicsWebView_virtualbase_inputMethodEvent(self: pointer, param1: pointer): void{.importc: "QGraphicsWebView_virtualbase_inputMethodEvent".}
proc fcQGraphicsWebView_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_inputMethodEvent".}
proc fQGraphicsWebView_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QGraphicsWebView_virtualbase_focusNextPrevChild".}
proc fcQGraphicsWebView_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_focusNextPrevChild".}
proc fQGraphicsWebView_virtualbase_sceneEvent(self: pointer, param1: pointer): bool{.importc: "QGraphicsWebView_virtualbase_sceneEvent".}
proc fcQGraphicsWebView_override_virtual_sceneEvent(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_sceneEvent".}
proc fQGraphicsWebView_virtualbase_getContentsMargins(self: pointer, left: ptr float64, top: ptr float64, right: ptr float64, bottom: ptr float64): void{.importc: "QGraphicsWebView_virtualbase_getContentsMargins".}
proc fcQGraphicsWebView_override_virtual_getContentsMargins(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_getContentsMargins".}
proc fQGraphicsWebView_virtualbase_type(self: pointer, ): cint{.importc: "QGraphicsWebView_virtualbase_type".}
proc fcQGraphicsWebView_override_virtual_typeX(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_type".}
proc fQGraphicsWebView_virtualbase_paintWindowFrame(self: pointer, painter: pointer, option: pointer, widget: pointer): void{.importc: "QGraphicsWebView_virtualbase_paintWindowFrame".}
proc fcQGraphicsWebView_override_virtual_paintWindowFrame(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_paintWindowFrame".}
proc fQGraphicsWebView_virtualbase_boundingRect(self: pointer, ): pointer{.importc: "QGraphicsWebView_virtualbase_boundingRect".}
proc fcQGraphicsWebView_override_virtual_boundingRect(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_boundingRect".}
proc fQGraphicsWebView_virtualbase_shape(self: pointer, ): pointer{.importc: "QGraphicsWebView_virtualbase_shape".}
proc fcQGraphicsWebView_override_virtual_shape(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_shape".}
proc fQGraphicsWebView_virtualbase_initStyleOption(self: pointer, option: pointer): void{.importc: "QGraphicsWebView_virtualbase_initStyleOption".}
proc fcQGraphicsWebView_override_virtual_initStyleOption(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_initStyleOption".}
proc fQGraphicsWebView_virtualbase_propertyChange(self: pointer, propertyName: struct_miqt_string, value: pointer): pointer{.importc: "QGraphicsWebView_virtualbase_propertyChange".}
proc fcQGraphicsWebView_override_virtual_propertyChange(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_propertyChange".}
proc fQGraphicsWebView_virtualbase_windowFrameEvent(self: pointer, e: pointer): bool{.importc: "QGraphicsWebView_virtualbase_windowFrameEvent".}
proc fcQGraphicsWebView_override_virtual_windowFrameEvent(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_windowFrameEvent".}
proc fQGraphicsWebView_virtualbase_windowFrameSectionAt(self: pointer, pos: pointer): cint{.importc: "QGraphicsWebView_virtualbase_windowFrameSectionAt".}
proc fcQGraphicsWebView_override_virtual_windowFrameSectionAt(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_windowFrameSectionAt".}
proc fQGraphicsWebView_virtualbase_changeEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWebView_virtualbase_changeEvent".}
proc fcQGraphicsWebView_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_changeEvent".}
proc fQGraphicsWebView_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWebView_virtualbase_closeEvent".}
proc fcQGraphicsWebView_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_closeEvent".}
proc fQGraphicsWebView_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWebView_virtualbase_hideEvent".}
proc fcQGraphicsWebView_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_hideEvent".}
proc fQGraphicsWebView_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWebView_virtualbase_moveEvent".}
proc fcQGraphicsWebView_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_moveEvent".}
proc fQGraphicsWebView_virtualbase_polishEvent(self: pointer, ): void{.importc: "QGraphicsWebView_virtualbase_polishEvent".}
proc fcQGraphicsWebView_override_virtual_polishEvent(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_polishEvent".}
proc fQGraphicsWebView_virtualbase_resizeEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWebView_virtualbase_resizeEvent".}
proc fcQGraphicsWebView_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_resizeEvent".}
proc fQGraphicsWebView_virtualbase_showEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWebView_virtualbase_showEvent".}
proc fcQGraphicsWebView_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_showEvent".}
proc fQGraphicsWebView_virtualbase_grabMouseEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWebView_virtualbase_grabMouseEvent".}
proc fcQGraphicsWebView_override_virtual_grabMouseEvent(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_grabMouseEvent".}
proc fQGraphicsWebView_virtualbase_ungrabMouseEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWebView_virtualbase_ungrabMouseEvent".}
proc fcQGraphicsWebView_override_virtual_ungrabMouseEvent(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_ungrabMouseEvent".}
proc fQGraphicsWebView_virtualbase_grabKeyboardEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWebView_virtualbase_grabKeyboardEvent".}
proc fcQGraphicsWebView_override_virtual_grabKeyboardEvent(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_grabKeyboardEvent".}
proc fQGraphicsWebView_virtualbase_ungrabKeyboardEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWebView_virtualbase_ungrabKeyboardEvent".}
proc fcQGraphicsWebView_override_virtual_ungrabKeyboardEvent(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_ungrabKeyboardEvent".}
proc fQGraphicsWebView_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QGraphicsWebView_virtualbase_eventFilter".}
proc fcQGraphicsWebView_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_eventFilter".}
proc fQGraphicsWebView_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWebView_virtualbase_timerEvent".}
proc fcQGraphicsWebView_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_timerEvent".}
proc fQGraphicsWebView_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWebView_virtualbase_childEvent".}
proc fcQGraphicsWebView_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_childEvent".}
proc fQGraphicsWebView_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QGraphicsWebView_virtualbase_customEvent".}
proc fcQGraphicsWebView_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QGraphicsWebView_override_virtual_customEvent".}
proc fQGraphicsWebView_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QGraphicsWebView_virtualbase_connectNotify".}
